runtime/cilium-base-policies/allow-all-workloads-to-api-server.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-all-workloads-to-api-server
spec:
  description: "Policy to allow all workload to access the kube API server"
  endpointSelector:
    matchLabels: {}
  egress:
  - toEntities:
    - kube-apiserver
