runtime/cilium-base-policies/allow-kube-dns-fromm-all-endpoints.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-kube-dns-from-all-endpoints
  namespace: kube-system
spec:
  description: "This policy allows the ingress on the kube-dns for all workload. The workload still needs to be configred for dns egress."
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
  ingress:
  - fromEndpoints:
    - {}
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
